--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welcome to Dr. Carwell Hospital, where we provide a wide range of medical services, including Counselling, Development Pediatrician, General Physician, Gynecology, Occupational Therapy, Pediatrician, Physiotherapy, Psychological Assessment, Speech Therapy, and VBT. Our dedicated team of healthcare professionals is here to serve your healthcare needs.">
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
